Version2.1-SymbolTable/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID V SP X END
Rule 2     V -> DIM IDLIST AS TIPO SEMMICOLON V
Rule 3     V -> <empty>
Rule 4     IDLIST -> ID
Rule 5     IDLIST -> IDLIST COMMA ID
Rule 6     IDLIST -> <empty>
Rule 7     TIPO -> WORD
Rule 8     TIPO -> FLOAT
Rule 9     TIPO -> ARRAY LBRACKET E RBRACKET
Rule 10    TIPO -> MATRIX LBRACKET E RBRACKET LBRACKET E RBRACKET
Rule 11    TIPO -> CUBE LBRACKET E RBRACKET LBRACKET E RBRACKET LBRACKET E RBRACKET
Rule 12    SP -> SUBPROCEDURE ID V X ENDSUB SEMMICOLON SP
Rule 13    SP -> <empty>
Rule 14    X -> S SEMMICOLON X
Rule 15    X -> <empty>
Rule 16    S -> LET E ASSIGN E
Rule 17    S -> PRINT Q
Rule 18    S -> INPUT TEXT GTGT U
Rule 19    S -> CLS
Rule 20    S -> IF EL THEN X ELSE1 ENDIF
Rule 21    S -> WHILE EL X WHEND
Rule 22    S -> DO X LOOPUNTIL EL ENDO
Rule 23    S -> FOR O TO E X NEXT
Rule 24    S -> GOSUB ID
Rule 25    O -> E
Rule 26    O -> E ASSIGN E
Rule 27    U -> ID
Rule 28    U -> ID LBRACKET E RBRACKET
Rule 29    U -> ID LBRACKET E RBRACKET LBRACKET E RBRACKET
Rule 30    U -> ID LBRACKET E RBRACKET LBRACKET E RBRACKET LBRACKET E RBRACKET
Rule 31    Q -> LPARENT U RPARENT
Rule 32    Q -> TEXT
Rule 33    TEXT -> LPARENT STRING H RPARENT
Rule 34    TEXT -> <empty>
Rule 35    H -> PLUS STRING H
Rule 36    H -> PLUS U H
Rule 37    H -> <empty>
Rule 38    ELSE1 -> ELSE X
Rule 39    ELSE1 -> <empty>
Rule 40    E -> E PLUS T
Rule 41    E -> E MINUS T
Rule 42    E -> T
Rule 43    T -> T TIMES F
Rule 44    T -> T DIVIDE F
Rule 45    T -> F
Rule 46    F -> NUMBER
Rule 47    F -> U
Rule 48    F -> LPARENT E RPARENT
Rule 49    EL -> EL OR TL
Rule 50    EL -> NOT TL
Rule 51    EL -> TL
Rule 52    TL -> TL AND FL
Rule 53    TL -> FL
Rule 54    FL -> K OPREL K
Rule 55    FL -> LPARENT EL RPARENT
Rule 56    OPREL -> LT
Rule 57    OPREL -> LTE
Rule 58    OPREL -> GT
Rule 59    OPREL -> GTE
Rule 60    OPREL -> NE
Rule 61    OPREL -> EQUAL
Rule 62    K -> ID
Rule 63    K -> NUMBER

Terminals, with rules where they appear

AND                  : 52
ARRAY                : 9
AS                   : 2
ASSIGN               : 16 26
CLS                  : 19
COMMA                : 5
CUBE                 : 11
DIM                  : 2
DIVIDE               : 44
DO                   : 22
ELSE                 : 38
END                  : 1
ENDIF                : 20
ENDO                 : 22
ENDSUB               : 12
EQUAL                : 61
FLOAT                : 8
FOR                  : 23
GOSUB                : 24
GT                   : 58
GTE                  : 59
GTGT                 : 18
ID                   : 1 4 5 12 24 27 28 29 30 62
IF                   : 20
INPUT                : 18
LBRACKET             : 9 10 10 11 11 11 28 29 29 30 30 30
LET                  : 16
LOOPUNTIL            : 22
LPARENT              : 31 33 48 55
LT                   : 56
LTE                  : 57
MATRIX               : 10
MINUS                : 41
NE                   : 60
NEXT                 : 23
NOT                  : 50
NUMBER               : 46 63
OR                   : 49
PLUS                 : 35 36 40
PRINT                : 17
PROGRAM              : 1
RBRACKET             : 9 10 10 11 11 11 28 29 29 30 30 30
RPARENT              : 31 33 48 55
SEMMICOLON           : 2 12 14
STRING               : 33 35
SUBPROCEDURE         : 12
THEN                 : 20
TIMES                : 43
TO                   : 23
WHEND                : 21
WHILE                : 21
WORD                 : 7
error                : 

Nonterminals, with rules where they appear

E                    : 9 10 10 11 11 11 16 16 23 25 26 26 28 29 29 30 30 30 40 41 48
EL                   : 20 21 22 49 55
ELSE1                : 20
F                    : 43 44 45
FL                   : 52 53
H                    : 33 35 36
IDLIST               : 2 5
K                    : 54 54
O                    : 23
OPREL                : 54
Q                    : 17
S                    : 14
SP                   : 1 12
T                    : 40 41 42 43 44
TEXT                 : 18 32
TIPO                 : 2
TL                   : 49 50 51 52
U                    : 18 31 36 47
V                    : 1 2 12
X                    : 1 12 14 20 21 22 23 38
program              : 0

Parsing method: SLR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID V SP X END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID V SP X END

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . V SP X END
    (2) V -> . DIM IDLIST AS TIPO SEMMICOLON V
    (3) V -> .

    DIM             shift and go to state 5
    SUBPROCEDURE    reduce using rule 3 (V -> .)
    LET             reduce using rule 3 (V -> .)
    PRINT           reduce using rule 3 (V -> .)
    INPUT           reduce using rule 3 (V -> .)
    CLS             reduce using rule 3 (V -> .)
    IF              reduce using rule 3 (V -> .)
    WHILE           reduce using rule 3 (V -> .)
    DO              reduce using rule 3 (V -> .)
    FOR             reduce using rule 3 (V -> .)
    GOSUB           reduce using rule 3 (V -> .)
    END             reduce using rule 3 (V -> .)
    ENDSUB          reduce using rule 3 (V -> .)

    V                              shift and go to state 4

state 4

    (1) program -> PROGRAM ID V . SP X END
    (12) SP -> . SUBPROCEDURE ID V X ENDSUB SEMMICOLON SP
    (13) SP -> .

    SUBPROCEDURE    shift and go to state 7
    LET             reduce using rule 13 (SP -> .)
    PRINT           reduce using rule 13 (SP -> .)
    INPUT           reduce using rule 13 (SP -> .)
    CLS             reduce using rule 13 (SP -> .)
    IF              reduce using rule 13 (SP -> .)
    WHILE           reduce using rule 13 (SP -> .)
    DO              reduce using rule 13 (SP -> .)
    FOR             reduce using rule 13 (SP -> .)
    GOSUB           reduce using rule 13 (SP -> .)
    END             reduce using rule 13 (SP -> .)

    SP                             shift and go to state 6

state 5

    (2) V -> DIM . IDLIST AS TIPO SEMMICOLON V
    (4) IDLIST -> . ID
    (5) IDLIST -> . IDLIST COMMA ID
    (6) IDLIST -> .

    ID              shift and go to state 9
    AS              reduce using rule 6 (IDLIST -> .)
    COMMA           reduce using rule 6 (IDLIST -> .)

    IDLIST                         shift and go to state 8

state 6

    (1) program -> PROGRAM ID V SP . X END
    (14) X -> . S SEMMICOLON X
    (15) X -> .
    (16) S -> . LET E ASSIGN E
    (17) S -> . PRINT Q
    (18) S -> . INPUT TEXT GTGT U
    (19) S -> . CLS
    (20) S -> . IF EL THEN X ELSE1 ENDIF
    (21) S -> . WHILE EL X WHEND
    (22) S -> . DO X LOOPUNTIL EL ENDO
    (23) S -> . FOR O TO E X NEXT
    (24) S -> . GOSUB ID

    END             reduce using rule 15 (X -> .)
    ENDSUB          reduce using rule 15 (X -> .)
    ELSE            reduce using rule 15 (X -> .)
    ENDIF           reduce using rule 15 (X -> .)
    WHEND           reduce using rule 15 (X -> .)
    LOOPUNTIL       reduce using rule 15 (X -> .)
    NEXT            reduce using rule 15 (X -> .)
    LET             shift and go to state 12
    PRINT           shift and go to state 13
    INPUT           shift and go to state 14
    CLS             shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    GOSUB           shift and go to state 20

    X                              shift and go to state 10
    S                              shift and go to state 11

state 7

    (12) SP -> SUBPROCEDURE . ID V X ENDSUB SEMMICOLON SP

    ID              shift and go to state 21


state 8

    (2) V -> DIM IDLIST . AS TIPO SEMMICOLON V
    (5) IDLIST -> IDLIST . COMMA ID

    AS              shift and go to state 22
    COMMA           shift and go to state 23


state 9

    (4) IDLIST -> ID .

    AS              reduce using rule 4 (IDLIST -> ID .)
    COMMA           reduce using rule 4 (IDLIST -> ID .)


state 10

    (1) program -> PROGRAM ID V SP X . END

    END             shift and go to state 24


state 11

    (14) X -> S . SEMMICOLON X

    SEMMICOLON      shift and go to state 25


state 12

    (16) S -> LET . E ASSIGN E
    (40) E -> . E PLUS T
    (41) E -> . E MINUS T
    (42) E -> . T
    (43) T -> . T TIMES F
    (44) T -> . T DIVIDE F
    (45) T -> . F
    (46) F -> . NUMBER
    (47) F -> . U
    (48) F -> . LPARENT E RPARENT
    (27) U -> . ID
    (28) U -> . ID LBRACKET E RBRACKET
    (29) U -> . ID LBRACKET E RBRACKET LBRACKET E RBRACKET
    (30) U -> . ID LBRACKET E RBRACKET LBRACKET E RBRACKET LBRACKET E RBRACKET

    NUMBER          shift and go to state 29
    LPARENT         shift and go to state 31
    ID              shift and go to state 32

    E                              shift and go to state 26
    T                              shift and go to state 27
    F                              shift and go to state 28
    U                              shift and go to state 30

state 13

    (17) S -> PRINT . Q
    (31) Q -> . LPARENT U RPARENT
    (32) Q -> . TEXT
    (33) TEXT -> . LPARENT STRING H RPARENT
    (34) TEXT -> .

    LPARENT         shift and go to state 34
    GTGT            reduce using rule 34 (TEXT -> .)
    SEMMICOLON      reduce using rule 34 (TEXT -> .)

    Q                              shift and go to state 33
    TEXT                           shift and go to state 35

state 14

    (18) S -> INPUT . TEXT GTGT U
    (33) TEXT -> . LPARENT STRING H RPARENT
    (34) TEXT -> .

    LPARENT         shift and go to state 37
    GTGT            reduce using rule 34 (TEXT -> .)
    SEMMICOLON      reduce using rule 34 (TEXT -> .)

    TEXT                           shift and go to state 36

state 15

    (19) S -> CLS .

    SEMMICOLON      reduce using rule 19 (S -> CLS .)


state 16

    (20) S -> IF . EL THEN X ELSE1 ENDIF
    (49) EL -> . EL OR TL
    (50) EL -> . NOT TL
    (51) EL -> . TL
    (52) TL -> . TL AND FL
    (53) TL -> . FL
    (54) FL -> . K OPREL K
    (55) FL -> . LPARENT EL RPARENT
    (62) K -> . ID
    (63) K -> . NUMBER

    NOT             shift and go to state 40
    LPARENT         shift and go to state 43
    ID              shift and go to state 44
    NUMBER          shift and go to state 45

    EL                             shift and go to state 38
    TL                             shift and go to state 39
    FL                             shift and go to state 41
    K                              shift and go to state 42

state 17

    (21) S -> WHILE . EL X WHEND
    (49) EL -> . EL OR TL
    (50) EL -> . NOT TL
    (51) EL -> . TL
    (52) TL -> . TL AND FL
    (53) TL -> . FL
    (54) FL -> . K OPREL K
    (55) FL -> . LPARENT EL RPARENT
    (62) K -> . ID
    (63) K -> . NUMBER

    NOT             shift and go to state 40
    LPARENT         shift and go to state 43
    ID              shift and go to state 44
    NUMBER          shift and go to state 45

    EL                             shift and go to state 46
    TL                             shift and go to state 39
    FL                             shift and go to state 41
    K                              shift and go to state 42

state 18

    (22) S -> DO . X LOOPUNTIL EL ENDO
    (14) X -> . S SEMMICOLON X
    (15) X -> .
    (16) S -> . LET E ASSIGN E
    (17) S -> . PRINT Q
    (18) S -> . INPUT TEXT GTGT U
    (19) S -> . CLS
    (20) S -> . IF EL THEN X ELSE1 ENDIF
    (21) S -> . WHILE EL X WHEND
    (22) S -> . DO X LOOPUNTIL EL ENDO
    (23) S -> . FOR O TO E X NEXT
    (24) S -> . GOSUB ID

    END             reduce using rule 15 (X -> .)
    ENDSUB          reduce using rule 15 (X -> .)
    ELSE            reduce using rule 15 (X -> .)
    ENDIF           reduce using rule 15 (X -> .)
    WHEND           reduce using rule 15 (X -> .)
    LOOPUNTIL       reduce using rule 15 (X -> .)
    NEXT            reduce using rule 15 (X -> .)
    LET             shift and go to state 12
    PRINT           shift and go to state 13
    INPUT           shift and go to state 14
    CLS             shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    GOSUB           shift and go to state 20

    X                              shift and go to state 47
    S                              shift and go to state 11

state 19

    (23) S -> FOR . O TO E X NEXT
    (25) O -> . E
    (26) O -> . E ASSIGN E
    (40) E -> . E PLUS T
    (41) E -> . E MINUS T
    (42) E -> . T
    (43) T -> . T TIMES F
    (44) T -> . T DIVIDE F
    (45) T -> . F
    (46) F -> . NUMBER
    (47) F -> . U
    (48) F -> . LPARENT E RPARENT
    (27) U -> . ID
    (28) U -> . ID LBRACKET E RBRACKET
    (29) U -> . ID LBRACKET E RBRACKET LBRACKET E RBRACKET
    (30) U -> . ID LBRACKET E RBRACKET LBRACKET E RBRACKET LBRACKET E RBRACKET

    NUMBER          shift and go to state 29
    LPARENT         shift and go to state 31
    ID              shift and go to state 32

    O                              shift and go to state 48
    E                              shift and go to state 49
    T                              shift and go to state 27
    F                              shift and go to state 28
    U                              shift and go to state 30

state 20

    (24) S -> GOSUB . ID

    ID              shift and go to state 50


state 21

    (12) SP -> SUBPROCEDURE ID . V X ENDSUB SEMMICOLON SP
    (2) V -> . DIM IDLIST AS TIPO SEMMICOLON V
    (3) V -> .

    DIM             shift and go to state 5
    SUBPROCEDURE    reduce using rule 3 (V -> .)
    LET             reduce using rule 3 (V -> .)
    PRINT           reduce using rule 3 (V -> .)
    INPUT           reduce using rule 3 (V -> .)
    CLS             reduce using rule 3 (V -> .)
    IF              reduce using rule 3 (V -> .)
    WHILE           reduce using rule 3 (V -> .)
    DO              reduce using rule 3 (V -> .)
    FOR             reduce using rule 3 (V -> .)
    GOSUB           reduce using rule 3 (V -> .)
    END             reduce using rule 3 (V -> .)
    ENDSUB          reduce using rule 3 (V -> .)

    V                              shift and go to state 51

state 22

    (2) V -> DIM IDLIST AS . TIPO SEMMICOLON V
    (7) TIPO -> . WORD
    (8) TIPO -> . FLOAT
    (9) TIPO -> . ARRAY LBRACKET E RBRACKET
    (10) TIPO -> . MATRIX LBRACKET E RBRACKET LBRACKET E RBRACKET
    (11) TIPO -> . CUBE LBRACKET E RBRACKET LBRACKET E RBRACKET LBRACKET E RBRACKET

    WORD            shift and go to state 53
    FLOAT           shift and go to state 54
    ARRAY           shift and go to state 55
    MATRIX          shift and go to state 56
    CUBE            shift and go to state 57

    TIPO                           shift and go to state 52

state 23

    (5) IDLIST -> IDLIST COMMA . ID

    ID              shift and go to state 58


state 24

    (1) program -> PROGRAM ID V SP X END .

    $end            reduce using rule 1 (program -> PROGRAM ID V SP X END .)


state 25

    (14) X -> S SEMMICOLON . X
    (14) X -> . S SEMMICOLON X
    (15) X -> .
    (16) S -> . LET E ASSIGN E
    (17) S -> . PRINT Q
    (18) S -> . INPUT TEXT GTGT U
    (19) S -> . CLS
    (20) S -> . IF EL THEN X ELSE1 ENDIF
    (21) S -> . WHILE EL X WHEND
    (22) S -> . DO X LOOPUNTIL EL ENDO
    (23) S -> . FOR O TO E X NEXT
    (24) S -> . GOSUB ID

    END             reduce using rule 15 (X -> .)
    ENDSUB          reduce using rule 15 (X -> .)
    ELSE            reduce using rule 15 (X -> .)
    ENDIF           reduce using rule 15 (X -> .)
    WHEND           reduce using rule 15 (X -> .)
    LOOPUNTIL       reduce using rule 15 (X -> .)
    NEXT            reduce using rule 15 (X -> .)
    LET             shift and go to state 12
    PRINT           shift and go to state 13
    INPUT           shift and go to state 14
    CLS             shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    GOSUB           shift and go to state 20

    S                              shift and go to state 11
    X                              shift and go to state 59

state 26

    (16) S -> LET E . ASSIGN E
    (40) E -> E . PLUS T
    (41) E -> E . MINUS T

    ASSIGN          shift and go to state 60
    PLUS            shift and go to state 61
    MINUS           shift and go to state 62


state 27

    (42) E -> T .
    (43) T -> T . TIMES F
    (44) T -> T . DIVIDE F

    RBRACKET        reduce using rule 42 (E -> T .)
    ASSIGN          reduce using rule 42 (E -> T .)
    SEMMICOLON      reduce using rule 42 (E -> T .)
    LET             reduce using rule 42 (E -> T .)
    PRINT           reduce using rule 42 (E -> T .)
    INPUT           reduce using rule 42 (E -> T .)
    CLS             reduce using rule 42 (E -> T .)
    IF              reduce using rule 42 (E -> T .)
    WHILE           reduce using rule 42 (E -> T .)
    DO              reduce using rule 42 (E -> T .)
    FOR             reduce using rule 42 (E -> T .)
    GOSUB           reduce using rule 42 (E -> T .)
    NEXT            reduce using rule 42 (E -> T .)
    TO              reduce using rule 42 (E -> T .)
    PLUS            reduce using rule 42 (E -> T .)
    MINUS           reduce using rule 42 (E -> T .)
    RPARENT         reduce using rule 42 (E -> T .)
    TIMES           shift and go to state 63
    DIVIDE          shift and go to state 64


state 28

    (45) T -> F .

    RBRACKET        reduce using rule 45 (T -> F .)
    ASSIGN          reduce using rule 45 (T -> F .)
    SEMMICOLON      reduce using rule 45 (T -> F .)
    LET             reduce using rule 45 (T -> F .)
    PRINT           reduce using rule 45 (T -> F .)
    INPUT           reduce using rule 45 (T -> F .)
    CLS             reduce using rule 45 (T -> F .)
    IF              reduce using rule 45 (T -> F .)
    WHILE           reduce using rule 45 (T -> F .)
    DO              reduce using rule 45 (T -> F .)
    FOR             reduce using rule 45 (T -> F .)
    GOSUB           reduce using rule 45 (T -> F .)
    NEXT            reduce using rule 45 (T -> F .)
    TO              reduce using rule 45 (T -> F .)
    PLUS            reduce using rule 45 (T -> F .)
    MINUS           reduce using rule 45 (T -> F .)
    TIMES           reduce using rule 45 (T -> F .)
    DIVIDE          reduce using rule 45 (T -> F .)
    RPARENT         reduce using rule 45 (T -> F .)


state 29

    (46) F -> NUMBER .

    RBRACKET        reduce using rule 46 (F -> NUMBER .)
    ASSIGN          reduce using rule 46 (F -> NUMBER .)
    SEMMICOLON      reduce using rule 46 (F -> NUMBER .)
    LET             reduce using rule 46 (F -> NUMBER .)
    PRINT           reduce using rule 46 (F -> NUMBER .)
    INPUT           reduce using rule 46 (F -> NUMBER .)
    CLS             reduce using rule 46 (F -> NUMBER .)
    IF              reduce using rule 46 (F -> NUMBER .)
    WHILE           reduce using rule 46 (F -> NUMBER .)
    DO              reduce using rule 46 (F -> NUMBER .)
    FOR             reduce using rule 46 (F -> NUMBER .)
    GOSUB           reduce using rule 46 (F -> NUMBER .)
    NEXT            reduce using rule 46 (F -> NUMBER .)
    TO              reduce using rule 46 (F -> NUMBER .)
    PLUS            reduce using rule 46 (F -> NUMBER .)
    MINUS           reduce using rule 46 (F -> NUMBER .)
    TIMES           reduce using rule 46 (F -> NUMBER .)
    DIVIDE          reduce using rule 46 (F -> NUMBER .)
    RPARENT         reduce using rule 46 (F -> NUMBER .)


state 30

    (47) F -> U .

    RBRACKET        reduce using rule 47 (F -> U .)
    ASSIGN          reduce using rule 47 (F -> U .)
    SEMMICOLON      reduce using rule 47 (F -> U .)
    LET             reduce using rule 47 (F -> U .)
    PRINT           reduce using rule 47 (F -> U .)
    INPUT           reduce using rule 47 (F -> U .)
    CLS             reduce using rule 47 (F -> U .)
    IF              reduce using rule 47 (F -> U .)
    WHILE           reduce using rule 47 (F -> U .)
    DO              reduce using rule 47 (F -> U .)
    FOR             reduce using rule 47 (F -> U .)
    GOSUB           reduce using rule 47 (F -> U .)
    NEXT            reduce using rule 47 (F -> U .)
    TO              reduce using rule 47 (F -> U .)
    PLUS            reduce using rule 47 (F -> U .)
    MINUS           reduce using rule 47 (F -> U .)
    TIMES           reduce using rule 47 (F -> U .)
    DIVIDE          reduce using rule 47 (F -> U .)
    RPARENT         reduce using rule 47 (F -> U .)


state 31

    (48) F -> LPARENT . E RPARENT
    (40) E -> . E PLUS T
    (41) E -> . E MINUS T
    (42) E -> . T
    (43) T -> . T TIMES F
    (44) T -> . T DIVIDE F
    (45) T -> . F
    (46) F -> . NUMBER
    (47) F -> . U
    (48) F -> . LPARENT E RPARENT
    (27) U -> . ID
    (28) U -> . ID LBRACKET E RBRACKET
    (29) U -> . ID LBRACKET E RBRACKET LBRACKET E RBRACKET
    (30) U -> . ID LBRACKET E RBRACKET LBRACKET E RBRACKET LBRACKET E RBRACKET

    NUMBER          shift and go to state 29
    LPARENT         shift and go to state 31
    ID              shift and go to state 32

    E                              shift and go to state 65
    T                              shift and go to state 27
    F                              shift and go to state 28
    U                              shift and go to state 30

state 32

    (27) U -> ID .
    (28) U -> ID . LBRACKET E RBRACKET
    (29) U -> ID . LBRACKET E RBRACKET LBRACKET E RBRACKET
    (30) U -> ID . LBRACKET E RBRACKET LBRACKET E RBRACKET LBRACKET E RBRACKET

    SEMMICOLON      reduce using rule 27 (U -> ID .)
    RPARENT         reduce using rule 27 (U -> ID .)
    PLUS            reduce using rule 27 (U -> ID .)
    RBRACKET        reduce using rule 27 (U -> ID .)
    ASSIGN          reduce using rule 27 (U -> ID .)
    LET             reduce using rule 27 (U -> ID .)
    PRINT           reduce using rule 27 (U -> ID .)
    INPUT           reduce using rule 27 (U -> ID .)
    CLS             reduce using rule 27 (U -> ID .)
    IF              reduce using rule 27 (U -> ID .)
    WHILE           reduce using rule 27 (U -> ID .)
    DO              reduce using rule 27 (U -> ID .)
    FOR             reduce using rule 27 (U -> ID .)
    GOSUB           reduce using rule 27 (U -> ID .)
    NEXT            reduce using rule 27 (U -> ID .)
    TO              reduce using rule 27 (U -> ID .)
    MINUS           reduce using rule 27 (U -> ID .)
    TIMES           reduce using rule 27 (U -> ID .)
    DIVIDE          reduce using rule 27 (U -> ID .)
    LBRACKET        shift and go to state 66


state 33

    (17) S -> PRINT Q .

    SEMMICOLON      reduce using rule 17 (S -> PRINT Q .)


state 34

    (31) Q -> LPARENT . U RPARENT
    (33) TEXT -> LPARENT . STRING H RPARENT
    (27) U -> . ID
    (28) U -> . ID LBRACKET E RBRACKET
    (29) U -> . ID LBRACKET E RBRACKET LBRACKET E RBRACKET
    (30) U -> . ID LBRACKET E RBRACKET LBRACKET E RBRACKET LBRACKET E RBRACKET

    STRING          shift and go to state 68
    ID              shift and go to state 32

    U                              shift and go to state 67

state 35

    (32) Q -> TEXT .

    SEMMICOLON      reduce using rule 32 (Q -> TEXT .)


state 36

    (18) S -> INPUT TEXT . GTGT U

    GTGT            shift and go to state 69


state 37

    (33) TEXT -> LPARENT . STRING H RPARENT

    STRING          shift and go to state 68


state 38

    (20) S -> IF EL . THEN X ELSE1 ENDIF
    (49) EL -> EL . OR TL

    THEN            shift and go to state 70
    OR              shift and go to state 71


state 39

    (51) EL -> TL .
    (52) TL -> TL . AND FL

    THEN            reduce using rule 51 (EL -> TL .)
    LET             reduce using rule 51 (EL -> TL .)
    PRINT           reduce using rule 51 (EL -> TL .)
    INPUT           reduce using rule 51 (EL -> TL .)
    CLS             reduce using rule 51 (EL -> TL .)
    IF              reduce using rule 51 (EL -> TL .)
    WHILE           reduce using rule 51 (EL -> TL .)
    DO              reduce using rule 51 (EL -> TL .)
    FOR             reduce using rule 51 (EL -> TL .)
    GOSUB           reduce using rule 51 (EL -> TL .)
    WHEND           reduce using rule 51 (EL -> TL .)
    ENDO            reduce using rule 51 (EL -> TL .)
    OR              reduce using rule 51 (EL -> TL .)
    RPARENT         reduce using rule 51 (EL -> TL .)
    AND             shift and go to state 72


state 40

    (50) EL -> NOT . TL
    (52) TL -> . TL AND FL
    (53) TL -> . FL
    (54) FL -> . K OPREL K
    (55) FL -> . LPARENT EL RPARENT
    (62) K -> . ID
    (63) K -> . NUMBER

    LPARENT         shift and go to state 43
    ID              shift and go to state 44
    NUMBER          shift and go to state 45

    TL                             shift and go to state 73
    FL                             shift and go to state 41
    K                              shift and go to state 42

state 41

    (53) TL -> FL .

    THEN            reduce using rule 53 (TL -> FL .)
    LET             reduce using rule 53 (TL -> FL .)
    PRINT           reduce using rule 53 (TL -> FL .)
    INPUT           reduce using rule 53 (TL -> FL .)
    CLS             reduce using rule 53 (TL -> FL .)
    IF              reduce using rule 53 (TL -> FL .)
    WHILE           reduce using rule 53 (TL -> FL .)
    DO              reduce using rule 53 (TL -> FL .)
    FOR             reduce using rule 53 (TL -> FL .)
    GOSUB           reduce using rule 53 (TL -> FL .)
    WHEND           reduce using rule 53 (TL -> FL .)
    ENDO            reduce using rule 53 (TL -> FL .)
    OR              reduce using rule 53 (TL -> FL .)
    AND             reduce using rule 53 (TL -> FL .)
    RPARENT         reduce using rule 53 (TL -> FL .)


state 42

    (54) FL -> K . OPREL K
    (56) OPREL -> . LT
    (57) OPREL -> . LTE
    (58) OPREL -> . GT
    (59) OPREL -> . GTE
    (60) OPREL -> . NE
    (61) OPREL -> . EQUAL

    LT              shift and go to state 75
    LTE             shift and go to state 76
    GT              shift and go to state 77
    GTE             shift and go to state 78
    NE              shift and go to state 79
    EQUAL           shift and go to state 80

    OPREL                          shift and go to state 74

state 43

    (55) FL -> LPARENT . EL RPARENT
    (49) EL -> . EL OR TL
    (50) EL -> . NOT TL
    (51) EL -> . TL
    (52) TL -> . TL AND FL
    (53) TL -> . FL
    (54) FL -> . K OPREL K
    (55) FL -> . LPARENT EL RPARENT
    (62) K -> . ID
    (63) K -> . NUMBER

    NOT             shift and go to state 40
    LPARENT         shift and go to state 43
    ID              shift and go to state 44
    NUMBER          shift and go to state 45

    EL                             shift and go to state 81
    TL                             shift and go to state 39
    FL                             shift and go to state 41
    K                              shift and go to state 42

state 44

    (62) K -> ID .

    LT              reduce using rule 62 (K -> ID .)
    LTE             reduce using rule 62 (K -> ID .)
    GT              reduce using rule 62 (K -> ID .)
    GTE             reduce using rule 62 (K -> ID .)
    NE              reduce using rule 62 (K -> ID .)
    EQUAL           reduce using rule 62 (K -> ID .)
    THEN            reduce using rule 62 (K -> ID .)
    LET             reduce using rule 62 (K -> ID .)
    PRINT           reduce using rule 62 (K -> ID .)
    INPUT           reduce using rule 62 (K -> ID .)
    CLS             reduce using rule 62 (K -> ID .)
    IF              reduce using rule 62 (K -> ID .)
    WHILE           reduce using rule 62 (K -> ID .)
    DO              reduce using rule 62 (K -> ID .)
    FOR             reduce using rule 62 (K -> ID .)
    GOSUB           reduce using rule 62 (K -> ID .)
    WHEND           reduce using rule 62 (K -> ID .)
    ENDO            reduce using rule 62 (K -> ID .)
    OR              reduce using rule 62 (K -> ID .)
    AND             reduce using rule 62 (K -> ID .)
    RPARENT         reduce using rule 62 (K -> ID .)


state 45

    (63) K -> NUMBER .
